# malaketh-layered

./: Cargo.toml  Dockerfile  Dockerfile2
app/: Cargo.toml
app/src/: app.rs  app_config.rs  main.rs  node.rs  state.rs  store.rs
types/src/: validator_set.rs
types/src/codec/proto/: mod.rs
